@@ -1,3 +1,8 @@
+2010-04-02  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* photoimageclutter.py: Added support fade-in/out animation in
+	  fullscreen mode.
+
 2010-04-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* photoimageclutter.py: Added GConf notify for UI.  Fixed bugs.
